5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1764_1580.log
== TEST (2019-06-04 16:02:16) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a1 = 0 
a2 = 0
a3 = 0
a4 = 0
i = 0

while (i!=vn):
	if (vn[i]<0):
		a1 = a1+1
	elif (vn[i]>=6):
		a2 = a2+1
	elif (vn[i]<6):
		a3 = a3+1
	elif (vn[i]>0):
		a4 = a4+1
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(a4)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:05:45) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a1 = 0 
a2 = 0
a3 = 0
a4 = 0
i = 0

while (i!=vn):
	if (vn[i]==-1):
		a1 = a1+1
	elif (6<=vn[i]=<10):
		a2 = a2+1
	elif (0<=vn[i]<6):
		a3 = a3+1
	elif (vn[i]>0):
		a4 = a4+1
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(a4)
print(a)
	
-- ERROR:
File "XXXX", line 15
    elif (6<=vn[i]=<10):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:19) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a1 = 0 
a2 = 0
a3 = 0
a4 = 0
i = 0

while (i!=size(vn)):
	if (vn[i]==-1):
		a1 = a1+1
	elif (6<=vn[i]=<10):
		a2 = a2+1
	elif (0<=vn[i]<6):
		a3 = a3+1
	elif (vn[i]>0):
		a4 = a4+1
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(a4)
print(a)
	
-- ERROR:
File "XXXX", line 15
    elif (6<=vn[i]=<10):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:07:30) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a1 = 0 
a2 = 0
a3 = 0
a4 = 0
i = 0

while (i!=size(vn)):
	if (vn[i]==-1):
		a1 = a1+1
	elif (6 <= vn[i] <= 10):
		a2 = a2+1
	elif (0 <= vn[i] < 6):
		a3 = a3+1
	elif (vn[i] > 0):
		a4 = a4+1
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(a4)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:08:05) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a1 = 0 
a2 = 0
a3 = 0
a4 = 0
i = 0

while (i!=size(vn)):
	if (vn[i] == -1):
		a1 = a1+1
	elif (6 <= vn[i] <= 10):
		a2 = a2+1
	elif (0 <= vn[i] < 6):
		a3 = a3+1
	elif (vn[i] > 0):
		a4 = a4+1
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(a4)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:08:19) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a1 = 0 
a2 = 0
a3 = 0
a4 = 0
i = 0

while (i!=size(vn)):
	if (vn[i] == -1):
		a1 = a1+1
	elif (6 <= vn[i] <= 10):
		a2 = a2+1
	elif (0 <= vn[i] < 6):
		a3 = a3+1
	elif (vn[i] > 0):
		a4 = a4+1
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(a4)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:10:23) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a = 0
a1 = 0 
a2 = 0
a3 = 0
a4 = 0
i = 0

while (i!=size(vn)):
	if (vn[i] == -1):
		a1 = a1+1
	elif (6 <= vn[i] <= 10):
		a2 = a2+1
	elif (0 <= vn[i] < 6):
		a3 = a3+1
	elif (vn[i] > 0):
		a4 = a4+1
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(round(a4, 2))
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:23:03) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a = 0
a1 = 0 
a2 = 0
a3 = 0
i = 0

while (i!=size(vn)):
	if (vn[i] == -1):
		a1 = a1+1
	elif (vn[i] >= 6):
		a2 = a2+1
	elif (0 <= vn[i] < 6):
		a3 = a3+1
	elif (vn[i] > 0):
		a4 = sum(vn)/size(vn)
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(round(a4, 2))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:24:34) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a = 0
a1 = 0 
a2 = 0
a4 = 0
a3 = 0
i = 0

while (i!=size(vn)):
	if (vn[i] == -1):
		a1 = a1+1
	elif (vn[i] >= 6):
		a2 = a2+1
	elif (0 <= vn[i] < 6):
		a3 = a3+1
	elif (vn[i] > 0):
		a4 = sum(vn)/size(vn)
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(round(a4, 2))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:29:37) 
-- CODE:
from numpy import *

vn = array(eval(input()))
va = array(eval(input()))

a = 0
a1 = 0 
a2 = 0
a4 = 0
a3 = 0
i = 0

while (i!=size(vn)):
	if (vn[i] == -1):
		a1 = a1+1
	elif (vn[i] >= 6):
		a2 = a2+1
	elif (0 <= vn[i] < 6):
		a3 = a3+1
	elif (vn[i] > 0):
		a4 = sum(vn)/size(vn)
	elif (vn[i] == max(vn)):
		a = va[i]
	i=i+1
print(a1)
print(a2)
print(a3)
print(round(a4, 2))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:57:23) 
-- CODE:
from numpy import*

l=array(
y=array(

i=0   #contador
f=0   #faltaram
a=0   #aprovados 
pr=0  #reprovados
pm=0  #media
while(size(l)>i):
	if(l[i]==-1):
		f+=1
	if(l[i]>=6)and(l[i]<=10):
		a+=1
	if(l[i]>-1)and(l[i]<6):
		pr+=1
	if(-1<l[i]):
		pm=pm+l[i]
	if(l[i]== max(l)):
		m=y[i]
	i+=1

print(f)
print(a)
print(pr)
print(round(pm/(a+pr),2))
print(m)
-- EXECUTION TIME:
0.891126
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 7
    f=0   #faltaram
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:58:12) 
-- CODE:
from numpy import*

l=array(eval(input('l: ')))
y=array(eval(input('y: ')))

i=0   #contador
f=0   #faltaram
a=0   #aprovados 
pr=0  #reprovados
pm=0  #media
while(size(l)>i):
	if(l[i]==-1):
		f+=1
	if(l[i]>=6)and(l[i]<=10):
		a+=1
	if(l[i]>-1)and(l[i]<6):
		pr+=1
	if(-1<l[i]):
		pm=pm+l[i]
	if(l[i]== max(l)):
		m=y[i]
	i+=1

print(f)
print(a)
print(pr)
print(round(pm/(a+pr),2))
print(m)
-- EXECUTION TIME:
0.833238
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
